# cc-snippets

./: .clang-format  .gitignore
asio/basic/01/: main.cc
asio/basic/02/: main.cc
asio/basic/03/: main.cc
asio/basic/04/: main.cc
asio/basic/05/: main.cc
asio/coro/: CMakeLists.txt  stackfull.cc
asio/echo/: CMakeLists.txt  client.cc  co_client.cc  co_server.cc  co_server.h  server.cc  server.h
asio/proxy/: CMakeLists.txt  server.cc
asio/socket/01/: main.cc
asio/socket/02/: main.cc
asio/socket/03/: CMakeLists.txt  co.cc  main.cc
asio/socket/04/: daytime.py  main.cc
asio/socket/05/: main.cc
asio/socket/06/: main.cc
asio/socket/07/: main.cc
book_cxx/chapter1/: extern.h  main.cc  obj.cc  std.cc
book_cxx/chapter2/: class.cc  test.cc
debug/: CMakeLists.txt  assert.cc  throw.cc  trace.cc
mpf/include/mini_mpf/: type_array.hpp  type_umap.hpp
mpf/test/: test.cpp
null/: concurrent_blocking_queue.h  concurrent_lru_cache.h  lru_cache.h  shared_ptr.h  spsc_ring_buffer.h  unique_ptr.h  weak_ptr.h
system/: mylib_classic.cc  mylib_error.h  mylib_result.cc  test_result.cc
test/: exception.cpp  fmt.cpp  functor.cpp  lambda.cpp  oo.cc  pmr.cpp  str.cpp  trash.cpp
test/module/: calculate.cpp
